[Document] Update swagger doc for gateway service.
