# cmd/server/main.go
@@ -167,13 +167,14 @@ func (s *Server) SetupRouter() *gin.Engine {
 	referral := v1.Group("/referral")
 	referral.GET("/create", authenticator, accountService.HandleGetRequest)
 	referral.POST("/accept", accountService.HandlePostRequest)
+	referral.DELETE("/nextAvailable", authenticator, accountService.HandleGetRequest)
 	referral.GET("/revoke/:id", authenticator, accountService.HandleGetRequest)
 	referral.GET("/list", authenticator, accountService.HandleGetRequest)
 	referral.GET("/count/accepted", authenticator, accountService.HandleGetRequest)
 	referral.GET("/count/left", authenticator, accountService.HandleGetRequest)
 	referral.GET("/:id", authenticator, accountService.HandleGetRequest)
 	referral.DELETE("/:id", authenticator, accountService.HandleDeleteRequest)
-
+	
 	// Handle by Payment Service
 	transaction := v1.Group("/transactions")
 	transaction.POST("/", authenticator, paymentService.HandlePostRequest)
