# docs/swagger.json
@@ -1546,6 +1546,56 @@
                 }
             }
         },
+        "/referral/nextAvailable": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Next invite available time",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "referral"
+                ],
+                "summary": "Next invite available time",
+                "operationId": "next-invite-available-time",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.GetNextInviteAvailableTimeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": ""
+                    },
+                    "401": {
+                        "description": ""
+                    },
+                    "403": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/referral/revoke": {
             "get": {
                 "security": [
@@ -2601,6 +2651,14 @@
             "properties": {
                 "left_invite_number": {
                     "type": "integer"
+                }
+            }
+        },
+        "api.GetNextInviteAvailableTimeResponse": {
+            "type": "object",
+            "properties": {
+                "next_available_time": {
+                    "type": "string"
                 }
             }
         },
